WebSocketLogAppender 추가 및 스케줄링 기능 삭제 front-server에서 실시간 출입 데이터를 60초에 한 번씩 받고있어서 중복 로직 제거